--- a/package.json
+++ b/package.json
@@ -9,14 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.3.3",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "eslint": "8.44.0",
-    "eslint-config-next": "13.4.8",
+    "@styled-icons/material-outlined": "^10.47.0",
     "next": "13.4.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^6.0.2",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.22.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/node": "20.3.3",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
+    "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "babel-loader": "^9.1.2",
+    "babel-plugin-styled-components": "^2.1.4",
+    "eslint": "8.44.0",
+    "eslint-config-next": "13.4.8",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.6.0",
+    "jest-styled-components": "^7.1.1",
+    "jsdom": "^22.1.0",
+    "prettier": "^3.0.0"
   }
 }
