--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.4.9",
     "@styled-icons/boxicons-logos": "^10.47.0",
     "@styled-icons/material-outlined": "^10.47.0",
     "next": "13.4.8",
