--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,12 +6,12 @@
     "node": true
   },
   "extends": [
-    "next/core-web-vitals",
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:react-hooks/recommended",
     "plugin:react/recommended",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "next/core-web-vitals"
   ],
   "globals": {
     "Atomics": "readonly",
@@ -32,7 +32,6 @@
     }
   },
   "rules": {
-    "prettier/prettier": "error",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "react/react-in-jsx-scope": "off",
     "@next/next/no-img-element": "off"
