--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
-    "@next/font": "^13.4.9",
     "@styled-icons/boxicons-logos": "^10.47.0",
     "@styled-icons/material-outlined": "^10.47.0",
     "next": "13.4.8",
@@ -23,6 +22,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.22.6",
+    "@emotion/is-prop-valid": "^1.2.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/node": "20.3.3",
