--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,8 @@
     "prettier/prettier": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "react/react-in-jsx-scope": "off",
-    "@next/next/no-img-element": "off"
+    "@next/next/no-img-element": "off",
+    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/no-empty-interface": "off"
   }
 }
