--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,7 @@
     "react/react-in-jsx-scope": "off",
     "@next/next/no-img-element": "off",
     "@typescript-eslint/no-unused-vars": "off",
-    "@typescript-eslint/no-empty-interface": "off"
+    "@typescript-eslint/no-empty-interface": "off",
+    "@typescript-eslint/ban-types": "off"
   }
 }
